--- a/app/index.html
+++ b/app/index.html
@@ -15,16 +15,24 @@
         }
 
         .alert-box-overlay{
-            width: 1000px;
-            height: 1000px;
-            background-color: #000;
-            opacity: 0.4;
+            border-top: solid 308px #333;
+            border-bottom: solid 392px #333;
+
+            border-left: solid 345px #333;
+            border-right: solid 355px #333;
+
+            pointer-events: none;
+            opacity: 0.5;
             position: absolute;
-            top:45px;
+            width: 300px;
+            height: 300px;
+            top:45px
         }
+
 
         .alert-box{
             position: absolute;
+            pointer-events:none;
             border: solid 2px #f23c17;
             width: 300px;
             height: 300px;
@@ -32,18 +40,11 @@
             left:350px;
         }
 
-        .alert-box span{
-            display: block;
-            background-color: white;
-            width: 300px;
-            height: 300px;
-            opacity: 0.5;
-        }
-
         .ui-resizable-handle {
             position: absolute;
             font-size: 0.1px;
             display: block;
+            pointer-events: auto;
         }
 
         .ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle {
@@ -59,6 +60,7 @@
             height: 12px;
             right: -8px;
             bottom: -8px;
+            pointer-events: auto;
         }
 
         .ui-resizable-sw {
@@ -70,6 +72,7 @@
             height: 12px;
             left: -8px;
             bottom: -8px;
+            pointer-events: auto;
         }
 
         .ui-resizable-nw {
@@ -81,6 +84,7 @@
             height: 12px;
             left: -8px;
             top: -8px;
+            pointer-events: auto;
         }
 
         .ui-resizable-ne {
@@ -92,6 +96,7 @@
             height: 12px;
             right: -8px;
             top: -8px;
+            pointer-events: auto;
         }
 
     </style>
