--- a/app/index.html
+++ b/app/index.html
@@ -29,15 +29,22 @@
             top:45px
         }
 
+        .alert-box-parent{
+            pointer-events:none;
+            width: 1000px;
+            height: 1000px;
+            position: absolute;
+            top:45px;
+        }
 
         .alert-box{
             position: absolute;
             pointer-events:none;
             border: solid 2px #f23c17;
-            width: 300px;
-            height: 300px;
-            top:350px;
-            left:350px;
+            width: 298px;
+            height: 298px;
+            top:308px;
+            left:345px;
         }
 
         .ui-resizable-handle {
@@ -100,6 +107,7 @@
         }
 
     </style>
+
 </head>
   <body ng-app="angularRouterApp">
     <!-- Add your site or application content here -->
@@ -143,5 +151,8 @@
     <script src="bower_components/angular-ui-map/src/map.js"></script>
     <script src="scripts/hack-maps.js"></script>
         <!-- endbuild -->
+    <script type="text/javascript">
+
+    </script>
 </body>
 </html>
