--- a/app/index.html
+++ b/app/index.html
@@ -152,7 +152,7 @@
     <script src="scripts/hack-maps.js"></script>
         <!-- endbuild -->
     <script type="text/javascript">
-
+        var hackProjection;
     </script>
 </body>
 </html>
