--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,7 @@
             height: 32px;
             padding: 6px 6px 6px 6px;
             background-color: rgba(0, 0, 0, .15);
+            position: absolute;
 
             /* Transitions */
             -webkit-transition: padding 0.2s linear, background-color 0.2s linear;
@@ -197,6 +198,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/cluster.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
