--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/cluster.js"></script>
-    <script src="scripts/searchitems.js"></script>
+    <script src="scripts/properties.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
