--- a/app/index.html
+++ b/app/index.html
@@ -181,6 +181,75 @@
             background-color: rgba(158, 158, 158, 1.0);
         }
 
+            /*
+            generic styles applied to any carousel
+            must be ul/li
+            */
+        .rn-carousel-container {
+            overflow: hidden;
+        }
+
+        ul.rn-carousel-slides {
+            position: relative;
+            white-space: nowrap;
+            overflow: visible;
+            -webkit-transform: translate(0, 0);
+            -moz-transform: translate(0, 0);
+            transform: translate(0, 0);
+            padding: 0;
+            margin: 0;
+        }
+
+        ul.rn-carousel-slides li {
+            white-space: normal;
+            vertical-align: top;
+            display: inline-block;
+            width: 100%;
+            /*height: 100%;*/
+
+            width: 100%;
+            height: 300px;
+            background-color: aliceblue;
+            border-left: 1px solid red;
+
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+        }
+
+        .rn-carousel-animate {
+            -webkit-transition: -webkit-transform .1s ease-out;
+            -moz-transition: -moz-transform .1s ease-out;
+            transition: transform .1s ease-out;
+        }
+
+        .rn-carousel-noanimate {
+            -webkit-transition: none;
+            -moz-transition: none;
+            -ms-transition: none;
+            -o-transition: none;
+            transition: none;
+        }
+
+        .rn-carousel-indicator {
+            width: 100%;
+            text-align: center;
+            position: relative;
+            bottom: 20px;
+            height: 20px;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.6);
+        }
+
+        .rn-carousel-indicator span {
+            padding: 0 5px;
+            color: #333;
+            transition: color .2s ease-out;
+        }
+
+        .rn-carousel-indicator span.active {
+            color: white;
+        }
+
     </style>
 
 </head>
@@ -205,6 +274,7 @@
     <script src="scripts/listing.js"></script>
     <script src="scripts/router.js"></script>
     <script src="scripts/templates.js"></script>
+    <script src="scripts/fakeListingData.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
@@ -215,6 +285,8 @@
     <script src="bower_components/angular-ui/build/angular-ui.js"></script>
     <script src="bower_components/angular-ui-utils/modules/event/event.js"></script>
     <script src="scripts/hack-maps.js"></script>
+    <script src="libs/mobile.js"></script>
+    <script src="libs/carousel.js"></script>
         <!-- endbuild -->
 </body>
 </html>
